<resources>
    <string name="app_name">Health Tracking</string>
    <string name="textAppName">Health Tracking</string>
    <string name="btnLogin">Авторизация</string>
    <string name="btnSignup"><u>Регистрация</u></string>
    <string name="btnSignupReg">Регистрация</string>
    <string name="btnBack">Назад</string>
    <string name="btnRecord">Записать</string>
    <string name="btnView">Просмотр</string>
    <string name="btnChangeUser">Изменить</string>
    <string name="btnLogout">Выйти</string>
    <string name="textUserName">Health Tracking</string>
    <string name="textSteps">Шаги</string>
    <string name="textStepsTargetTxt">шаг(ов)</string>
    <string name="textStepsHistory">История шагов</string>
    <string name="textSleep">Сон</string>
    <string name="textSleepHistory">История сна</string>
    <string name="textFood">Еда</string>
    <string name="textWater">Вода</string>
    <string name="textBody">Данные тела</string>
    <string name="textHome">Домашняя</string>
    <string name="textProfile">Профиль</string>
    <string name="textSleepHrsText">час(ов)</string>
    <string name="textSleepMinText">минут</string>
    <string name="textFoodTargetCal">калорий</string>
    <string name="textWaterGlasses">стакан(ов)</string>
    <string name="textBodyKg">кг</string>
    <string name="textBodyCm">см</string>
    <string name="editUserName">Имя пользователя</string>
    <string name="editLogin">Логин</string>
    <string name="editPassword">Пароль</string>
    <string name="editRepeatPassword">Повторите пароль</string>
</resources>