<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.LoginPage"
    android:background="#000"
    android:padding="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/textAppName"
            android:textColor="@color/white"
            android:textSize="80dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editLogin"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:inputType="textPersonName"
                android:hint="@string/editLogin"
                android:textColorHint="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:hint="@string/editPassword"
                android:textColorHint="@color/white"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="45dp">
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rectangle_button"
            android:layout_marginBottom="15dp"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:text="@string/btnLogin"/>
        <Button
            android:id="@+id/btnBack"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="#00000000"
            android:onClick="btnBack"
            android:text="@string/btnBack"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>
</LinearLayout>